fix spacing

--- a/client/src/components/HomeSections/Sections/FindMeElseWhere/FindMeElseWhere.module.scss
+++ b/client/src/components/HomeSections/Sections/FindMeElseWhere/FindMeElseWhere.module.scss
@@ -21,7 +21,9 @@
       min-width: 30%;
       @include respond(df, sm) {
         min-width: 40%;
+        padding: 0.3rem;
       }
+      padding: 0.3rem 1rem;
       margin-right: 1rem;
       margin-bottom: 1rem;
       transition: all 0.3s;
@@ -35,7 +37,6 @@
       small {
         font-size: 9px;
       }
-      padding: 0.3rem;
       display: flex;
       border-radius: 4px;
       align-items: center;
@@ -47,8 +48,8 @@
         justify-content: center;
         margin-right: 1rem;
         img {
-          height: 30px;
-          width: 30px;
+          height: 20px;
+          width: 20px;
           object-fit: cover;
         }
       }
